# RetroPortal

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: agents-ci.yml  android-ci.yml
agents/: README.md  pyproject.toml
agents/examples/: deps.example.yaml
agents/src/retroportal/: __init__.py
agents/src/retroportal/autolaunch/: __init__.py  auto_launcher.py
agents/src/retroportal/debugger/: __init__.py  map_parser.py
agents/src/retroportal/hunter/: __init__.py  game_hunter.py  manifest_resolver.py
agents/src/retroportal/input/: __init__.py  binary_scanner.py
agents/tests/: test_smoke.py
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/retroportal/app/: MainActivity.kt
app/src/main/java/com/retroportal/app/ui/: GameSurfaceView.kt  InputOverlayView.kt
app/src/main/java/com/retroportal/engine/: NativeEngine.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: compliance.md
native/: CMakeLists.txt
native/include/retroportal/: ProcessHost.hpp  VirtualMemoryManager.hpp  jni_namespace.hpp
native/include/retroportal/gpu/: CommandBuffer.hpp  D3DTranslator.hpp  GpuBackend.hpp
native/src/: NativeEngine.cpp  ProcessHost.cpp  VirtualMemoryManager.cpp
native/src/gpu/: CommandBuffer.cpp  D3DTranslator.cpp  GpuBackend.cpp
scripts/: run_all_checks.ps1
shaders/: aspect_expand.frag  aspect_expand.vert
